[clc] [llvm20] [FTBFS] [Bisected] error: no matching function for call to ‘clang::CompilerInstance::createDiagnostics(clang::TextDiagnosticPrinter*)’
mesa trunk rev 379de4cd
Since https://github.com/llvm/llvm-project/commit/df9a14d7bbf1180e4f1474254c9d7ed6bcb4ce55 mesa trunk build against llvm 20 trunk fails. Build log attached.
../mesa/src/compiler/clc/clc_helpers.cpp: In function ‘std::unique_ptr<llvm::Module> clc_compile_to_llvm_module(llvm::LLVMContext&, const clc_compile_args*, const clc_logger*)’:
../mesa/src/compiler/clc/clc_helpers.cpp:844:24: error: no matching function for call to ‘clang::CompilerInstance::createDiagnostics(clang::TextDiagnosticPrinter*)’
844 | c->createDiagnostics(new clang::TextDiagnosticPrinter(
| ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
845 | diag_log_stream,
| ~~~~~~~~~~~~~~~~
846 | &c->getDiagnosticOpts()));
| ~~~~~~~~~~~~~~~~~~~~~~~~~
mesa-minimal-git-25.0.0_devel.198501.379de4cdceb-1-x86_64-build.log